# J-Fi

./: .gitmodules  README.md  mavlink-changes.patch
jfi_comm/: CMakeLists.txt  package.xml
jfi_comm/include/: jfi_comm.hpp  serial_comm_node.hpp
jfi_comm/launch/: serial_comm_node.launch.py
jfi_comm/src/: jfi_comm.cpp  serial_comm_node.cpp
src/j_fi/: CMakeLists.txt  package.xml
src/j_fi/include/: serial_receiver.hpp  serial_sender.hpp
src/j_fi/include/mavlink/rover/: gtestsuite.hpp  mavlink.h  mavlink_msg_trajectory_setpoint.h  mavlink_msg_vehicle_status.h  rover.h  rover.hpp  testsuite.h  version.h
src/j_fi/launch/: serial_receiver_run.launch.py  serial_sender_run.launch.py
src/j_fi/src/: serial_receiver.cpp  serial_sender.cpp
src/jfi_comm/: CMakeLists.txt  package.xml
src/jfi_comm/config/: jfi.xml
src/jfi_comm/include/: jfi_comm.hpp  serial_comm_node.hpp
src/jfi_comm/launch/: serial_comm_node.launch.py  test_simulation.launch.py
src/jfi_comm/src/: jfi_comm.cpp  main.cpp  serial_comm_node.cpp
src/jfi_transceiver/: CMakeLists.txt  package.xml
src/jfi_transceiver/include/: jfi_transceiver.hpp
src/jfi_transceiver/src/: jfi_transceiver.cpp  mavlink_test.cpp
src/jfi_transport/: CMakeLists.txt  package.xml
src/jfi_transport/include/: jfi_transport.hpp
src/jfi_transport/src/: jfi_transport.cpp
src/protocol/: CMakeLists.txt  package.xml
src/protocol/include/: convert_msg.hpp  protocol.hpp
src/protocol/src/: convert_msg.cpp  protocol.cpp
src/protocol/test/: test_gmcs_proto.cpp
src/serial_comm/: CMakeLists.txt  package.xml
src/serial_comm/include/: mavlink_serial_comm.hpp
src/serial_comm/launch/: serial_comm_node.launch.py
src/serial_comm/src/: mavlink_serial_comm.cpp  serial_comm_node.cpp
src/serial_relay/: CMakeLists.txt  package.xml
src/serial_relay/include/: relay_node.hpp  serial_comm.hpp
src/serial_relay/src/: main.cpp  relay_node.cpp  serial_comm.cpp
