<?xml version="1.0"?>
<package format="3">
    <name>protocol</name>
    <version>0.0.1</version>
    <description>Protocol Library for J-Fi Communication</description>
    <maintainer email="your_email@example.com">KYG</maintainer>
    <license>Apache-2.0</license>

    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <test_depend>ament_cmake_gtest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
